// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. daily universal register 1`] = `
<div>
  <Image
    aspectRatio={1}
    uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
  />
  <div>
    Daily Universal Register
  </div>
  <TileS
    breakpoint="small"
  />
  <div />
  <TileS
    breakpoint="small"
  />
  <div />
  <Image
    aspectRatio={1}
    uri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
  />
  <TileS
    breakpoint="small"
  />
  <div />
  <Image
    aspectRatio={1}
    uri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
  />
  <TileS
    breakpoint="small"
  />
</div>
`;

exports[`1. secondary one and four 1`] = `
<div>
  <div>
    <TheSTLogo
      height={40}
      width={60}
    />
  </div>
  <div />
  <div>
    <div>
      <div>
        <TileN
          breakpoint="small"
          tileName="secondary"
        />
      </div>
    </div>
    <div>
      <TileO
        breakpoint="small"
        tileName="support1"
      />
      <div />
      <TileO
        breakpoint="small"
        tileName="support2"
      />
      <div />
      <TileO
        breakpoint="small"
        tileName="support3"
      />
      <div />
      <TileO
        breakpoint="small"
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`1. secondary one and four 2`] = `
<div>
  <div>
    <TheTimesLogo
      height={37}
      width={35}
    />
  </div>
  <div />
  <div>
    <div>
      <div>
        <TileN
          breakpoint="small"
          tileName="secondary"
        />
      </div>
    </div>
    <div>
      <TileO
        breakpoint="small"
        tileName="support1"
      />
      <div />
      <TileO
        breakpoint="small"
        tileName="support2"
      />
      <div />
      <TileO
        breakpoint="small"
        tileName="support3"
      />
      <div />
      <TileO
        breakpoint="small"
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`2. lead one full width 1`] = `
<TileA
  tileName="lead"
/>
`;

exports[`2. leaders 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.4}
      uri="https://www.thetimes.co.uk/d/img/logos/sundaytimes-with-crest-black-53d6e31fb8.png"
    />
    <div>
      <div>
         Leading Articles 
      </div>
    </div>
  </div>
  <div>
    <TileM
      breakpoint="small"
      tileName="leader1"
    />
    <div />
    <TileM
      breakpoint="small"
      tileName="leader2"
    />
    <div />
    <TileM
      breakpoint="small"
      tileName="leader3"
    />
  </div>
</div>
`;

exports[`2. leaders 2`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
    />
    <div>
      <div>
         Leading Articles 
      </div>
    </div>
  </div>
  <div>
    <TileM
      breakpoint="small"
      tileName="leader1"
    />
    <div />
    <TileM
      breakpoint="small"
      tileName="leader2"
    />
    <div />
    <TileM
      breakpoint="small"
      tileName="leader3"
    />
  </div>
</div>
`;

exports[`3. lead one and one 1`] = `
<div>
  <TileA
    tileName="lead"
  />
  <div />
  <TileB
    tileName="support"
  />
</div>
`;

exports[`4. lead one and four 1`] = `
Array [
  <TileI
    tileName="lead"
  />,
  <div>
    <TileJ
      tileName="support1"
    />
    <div />
    <TileJ
      tileName="support2"
    />
    <div />
    <TileJ
      tileName="support3"
    />
    <div />
    <TileJ
      tileName="support4"
    />
  </div>,
]
`;

exports[`5. standard 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileK
          breakpoint="small"
          tileName="standardItem1"
        />
        <div />
      </div>
    </div>
    <div>
      <div>
        <TileK
          breakpoint="small"
          tileName="standardItem2"
        />
        <div />
      </div>
    </div>
    <div>
      <div>
        <TileK
          breakpoint="small"
          tileName="standardItem3"
        />
        <div />
      </div>
    </div>
    <div>
      <div>
        <TileK
          breakpoint="small"
          tileName="standardItem4"
        />
        <div />
      </div>
    </div>
    <div>
      <div>
        <TileK
          breakpoint="small"
          tileName="standardItem5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`6. lead two no pic and two 1`] = `
<div>
  <TileF
    tileName="lead1"
  />
  <div />
  <TileB
    tileName="lead2"
  />
  <div />
  <TileD
    tileName="support1"
  />
  <div />
  <TileE
    tileName="support2"
  />
</div>
`;

exports[`7. secondary one 1`] = `
<TileA
  tileName="secondary"
/>
`;

exports[`8. secondary one and columnist 1`] = `
<div>
  <TileT
    tileName="secondary"
  />
  <div />
  <TileH
    tileName="columnist"
  />
</div>
`;

exports[`9. secondary four 1`] = `
Array [
  <div>
    <div>
      <TileC
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary2"
      />
    </div>
  </div>,
  <div />,
  <div>
    <div>
      <TileC
        tileName="secondary3"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary4"
      />
    </div>
  </div>,
]
`;

exports[`10. secondary one and four 1`] = `
<div>
  <div>
    <TheTimesLogo
      height={37}
      width={35}
    />
  </div>
  <div />
  <div>
    <div>
      <div>
        <TileN
          breakpoint="small"
          tileName="secondary"
        />
      </div>
    </div>
    <div>
      <TileO
        breakpoint="small"
        tileName="support1"
      />
      <div />
      <TileO
        breakpoint="small"
        tileName="support2"
      />
      <div />
      <TileO
        breakpoint="small"
        tileName="support3"
      />
      <div />
      <TileO
        breakpoint="small"
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`11. secondary two and two 1`] = `
Array [
  <div>
    <div>
      <TileC
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary2"
      />
    </div>
  </div>,
  <div />,
  <div>
    <TileG
      tileName="support1"
    />
  </div>,
  <div />,
  <div>
    <TileG
      tileName="support2"
    />
  </div>,
]
`;

exports[`12. secondary two no pic and two 1`] = `
<div>
  <TileB
    tileName="secondary1"
  />
  <div />
  <TileB
    tileName="secondary2"
  />
  <div />
  <TileG
    tileName="support1"
  />
  <div />
  <TileG
    tileName="support2"
  />
</div>
`;

exports[`13. list two and six no pic 1`] = `
Array [
  <div>
    <div>
      <TileC
        tileName="lead1"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="lead2"
      />
    </div>
  </div>,
  <div />,
  <div>
    <TileL
      tileName="support1"
    />
    <div />
    <TileL
      tileName="support2"
    />
    <div />
    <TileL
      tileName="support3"
    />
    <div />
    <TileL
      tileName="support4"
    />
    <div />
    <TileL
      tileName="support5"
    />
    <div />
    <TileL
      tileName="support6"
    />
  </div>,
]
`;

exports[`14. leaders 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
    />
    <div>
      <div>
         Leading Articles 
      </div>
    </div>
  </div>
  <div>
    <TileM
      breakpoint="small"
      tileName="leader1"
    />
    <div />
    <TileM
      breakpoint="small"
      tileName="leader2"
    />
    <div />
    <TileM
      breakpoint="small"
      tileName="leader3"
    />
  </div>
</div>
`;

exports[`15. comment lead and cartoon 1`] = `
<div>
  <TileP
    tileName="lead"
  />
  <div />
  <TileQ
    tileName="cartoon"
  />
</div>
`;

exports[`16. puzzle 1`] = `
<div>
  <div>
    <TileAJ
      id="0"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
  </div>
  <div>
    <TileAJ
      id="1"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
  </div>
  <div>
    <TileAJ
      id="2"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
  </div>
</div>
`;
